# fine-tuned-ocr-vlm

./: README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
